fix(styles.css): update font URLs for Helvetica-Condensed fonts
- Changed font URLs for "Helvetica-Condensed" and "Helvetica-Condensed-Bold" to point to the CMS test environment for proper font loading.

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@
   font-family: "Helvetica-Condensed", sans-serif;
   font-style: normal;
   font-weight: 400;
-  src: url("https://www.greenheck.com/Content/GreenheckStyles/fonts/Helvetica-Condensed.otf");
+  src: url("https://cms-test.greenheck.com/Content/GreenheckStyles/fonts/Helvetica-Condensed.otf");
 }
 
 @font-face {
   font-family: "Helvetica-Condensed-Bold", sans-serif;
   font-style: normal;
   font-weight: 700;
-  src: url("https://www.greenheck.com/Content/GreenheckStyles/fonts/Helvetica-Condensed-Bold.otf");
+  src: url("https://cms-test.greenheck.com/Content/GreenheckStyles/fonts/Helvetica-Condensed-Bold.otf");
 }
 @font-face {
   font-display: block;
